// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table Usuarios{
  user_id varchar [primary key]
  passwd varchar
  rol varchar
}
Table Grupos{
  group_id integer [primary key]
  nombre varchar
  profesor varchar
}
Table Estudiantes_por_Grupo{
  user_id varchar
  group_id integer
}
Table Tareas{
  tarea_id integer [primary key]
  Titulo varchar
  Descripcion varchar
  Fecha_Inicio varchar
  Fecha_Final varchar
  group_id integer
}
Table Entregas{
  tarea_id integer
  user_id varchar
  Fecha_Entrega varchar
  Archivo file
  Estado varchar
  Nota integer
}
Ref: "Usuarios"."user_id" < "Estudiantes_por_Grupo"."user_id"
Ref: "Usuarios"."user_id" < "Grupos"."profesor"
Ref: "Grupos"."group_id" < "Estudiantes_por_Grupo"."group_id"
Ref: "Grupos"."group_id" < "Tareas"."group_id"
Ref: "Tareas"."tarea_id" < "Entregas"."tarea_id"
Ref: "Usuarios"."user_id" < "Entregas"."user_id"